*Empty MediaWiki Message*

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -1,1 +1,1 @@
-Coronavirus yeqqnen ar temsedfart tamesguneft tamekruzt tanamsadt (s [[asegzel (tutlayt)|usegzel]]: '''SARS-CoV''') d [[Kuṛunavirus]] id igellun s [[tamsedfart tamesguneft tamekruzt tanamsadt|temsedfart tamesguneft tamekruzt tanamsadt]] <ref name=Thiel>{{aseggayet s wedlis| author = Thiel V (editor). | title = Coronaviruses: Molecular and Cellular Biology | edition = 1st | publisher = Caister Academic Press | year = 2007 |  isbn =  978-1-904455-16-5 }}</ref>, dɣa [[Avirus|avirus-a]] iga d asrag (d ssebba) n tzimdelt n SARS deg useggas n 2003. Avirus-a iban-d g 2002 deg ugezdu n [[Guangdong]] (di tmurt n [[Ccinwa]]). Deg tallit gar n 1 wamber ar 31 ɣuct, Aṭṭan-a yemken (iḥuza) 8096 n imdanen deg 29 n tmura akken id igla s tmekkist (lmut) n 774, azal ameqran deg-sent di tmurt n Ccinwa
+'''Coronavirus yeqqnen ar temsedfart tamesguneft tamekruzt tanamsadt''' (s [[asegzel (tutlayt)|usegzel]]: '''SARS-CoV''') d [[Kuṛunavirus]] id igellun s [[tamsedfart tamesguneft tamekruzt tanamsadt|temsedfart tamesguneft tamekruzt tanamsadt]] <ref name=Thiel>{{aseggayet s wedlis| author = Thiel V (editor). | title = Coronaviruses: Molecular and Cellular Biology | edition = 1st | publisher = Caister Academic Press | year = 2007 |  isbn =  978-1-904455-16-5 }}</ref>, dɣa [[Avirus|avirus-a]] iga d asrag (d ssebba) n tzimdelt n SARS deg useggas n 2003. Avirus-a iban-d g 2002 deg ugezdu n [[Guangdong]] (di tmurt n [[Ccinwa]]). Deg tallit gar n 1 wamber ar 31 ɣuct, Aṭṭan-a yemken (iḥuza) 8096 n imdanen deg 29 n tmura akken id igla s tmekkist (lmut) n 774, azal ameqran deg-sent di tmurt n Ccinwa
