*Empty MediaWiki Message*

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -1,1 +1,5 @@
-'''Coronavirus yeqqnen ar temsedfart tamesguneft tamekruzt tanamsadt''' (s [[asegzel (tutlayt)|usegzel]]: '''SARS-CoV''') d [[Kuṛunavirus]] id igellun s [[tamsedfart tamesguneft tamekruzt tanamsadt|temsedfart tamesguneft tamekruzt tanamsadt]] <ref name=Thiel>{{aseggayet s wedlis| author = Thiel V (editor). | title = Coronaviruses: Molecular and Cellular Biology | edition = 1st | publisher = Caister Academic Press | year = 2007 |  isbn =  978-1-904455-16-5 }}</ref>, dɣa [[Avirus|avirus-a]] iga d asrag (d ssebba) n tzimdelt n SARS deg useggas n 2003. Avirus-a iban-d g 2002 deg ugezdu n [[Guangdong]] (di tmurt n [[Ccinwa]]). Deg tallit gar n 1 wamber ar 31 ɣuct, Aṭṭan-a yemken (iḥuza) 8096 n imdanen deg 29 n tmura akken id igla s tmekkist (lmut) n 774, azal ameqran deg-sent di tmurt n Ccinwa
+'''Coronavirus yeqqnen ar temsedfart tamesguneft tamekruzt tanamsadt''' (s [[asegzel (tutlayt)|usegzel]]: '''SARS-CoV''') d [[Kuṛunavirus]] id igellun s [[tamsedfart tamesguneft tamekruzt tanamsadt|temsedfart tamesguneft tamekruzt tanamsadt]] <ref name=Thiel>{{aseggayet s wedlis| author = Thiel V (editor). | title = Coronaviruses: Molecular and Cellular Biology | edition = 1st | publisher = Caister Academic Press | year = 2007 |  isbn =  978-1-904455-16-5 }}</ref>, dɣa [[Avirus|avirus-a]] iga d asrag (d ssebba) n tzimdelt n SARS deg useggas n 2003. Avirus-a iban-d g 2002 deg ugezdu n [[Guangdong]] (di tmurt n [[Ccinwa]]). Deg tallit gar n 1 wamber ar 31 ɣuct, Aṭṭan-a yemken (iḥuza) 8096 n imdanen deg 29 n tmura akken id igla s tmekkist (lmut) n 774, azal ameqran deg-sent di tmurt n Ccinwa, iga d [[Avirus ARN ayenreẓwi ilaw]] (tagrawt tis 4 deg [[Asismel n Baltimore|usismel n Baltimore]]) seg [[Betacoronavirus]] 
+
+Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n iden n umadal (s talɣa meẓẓiyen) tessufɣ-d [[Tuddsa tamadlant n tdawsa|tuddsa tamadlant n tdawsa]] alɣu tenna-d deg-s d akken [[Kuṛunavirus]] id yettukzen sɣur n waṭas n [[asnidi|isnidan]] iga d asrag agejdan i tamsedfart n SARS akken iffren kra n tirawin n uvirus-a deg isnidan deg [[New York]], [[San Francisco]], [[Manilla]] yakk d [[Hong Kong]] 
+
+[[Ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] deg [[Iwunak Yeddukklen n Temrikt|Marikan]] yakk d [[asnidi n NML|usnidi n NML]] deg [[Kanada]] ukzen-d aǧinum n uvirus n SARS deg yebrir 2003 <ref>{{amnir n web|url=https://www.cdc.gov/about/history/sars/feature.htm |title=Remembering SARS: A Deadly Puzzle and the Efforts to Solve It |date=11 yebrir 2013 |accessdate=3 ɣuct 2013 |publisher=Centers for Disease Control and Prevention |url-status=live |archiveurl=https://web.archive.org/web/20130801143131/http://www.cdc.gov/about/history/sars/feature.htm |archivedate=1 August 2013 }}</ref><ref>{{amnir n web|url=http://www.who.int/mediacentre/releases/2003/pr31/en/ |title=Coronavirus never before seen in humans is the cause of SARS |publisher=United Nations World Health Organization |date=16 yebrir 2006 |accessdate=5 yulyu 2006 |url-status=live |archiveurl=https://web.archive.org/web/20040812124322/http://www.who.int/mediacentre/releases/2003/pr31/en/ |archivedate=12 August 2004 }}</ref>
