--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Coronavirus yeqqnen ar temsedfart tamesguneft tamekruzt tanamsadt''' (s [[asegzel (tutlayt)|usegzel]]: '''SARS-CoV''') d [[Kuṛunavirus]] id igellun s [[tamsedfart tamesguneft tamekruzt tanamsadt|temsedfart tamesguneft tamekruzt tanamsadt]] <ref name=Thiel>{{aseggayet s wedlis| author = Thiel V (editor). | title = Coronaviruses: Molecular and Cellular Biology | edition = 1st | publisher = Caister Academic Press | year = 2007 |  isbn =  978-1-904455-16-5 }}</ref>, dɣa [[Avirus|avirus-a]] iga d asrag (d ssebba) n tzimdelt n SARS deg useggas n 2003. Avirus-a iban-d g 2002 deg ugezdu n [[Guangdong]] (di tmurt n [[Ccinwa]]). Deg tallit gar n 1 wamber ar 31 ɣuct, Aṭṭan-a yemken (iḥuza) 8096 n imdanen deg 29 n tmura akken id igla s tmekkist (lmut) n 774, azal ameqran deg-sent di tmurt n Ccinwa, iga d [[Avirus ARN ayenreẓwi ilaw]] (tagrawt tis 4 deg [[Asismel n Baltimore|usismel n Baltimore]]) seg [[Betacoronavirus]] 
 
 Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n iden n umadal (s talɣa meẓẓiyen) tessufɣ-d [[Tuddsa tamadlant n tdawsa|tuddsa tamadlant n tdawsa]] alɣu tenna-d deg-s d akken [[Kuṛunavirus]] id yettukzen sɣur n waṭas n [[asnidi|isnidan]] iga d asrag agejdan i tamsedfart n SARS akken iffren kra n tirawin n uvirus-a deg isnidan deg [[New York]], [[San Francisco]], [[Manilla]] yakk d [[Hong Kong]] 
