/* Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) */

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -4,3 +4,20 @@
 Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n iden n umadal (s talɣa meẓẓiyen) tessufɣ-d [[Tuddsa tamadlant n tdawsa|tuddsa tamadlant n tdawsa]] alɣu tenna-d deg-s d akken [[Kuṛunavirus]] id yettukzen sɣur n waṭas n [[asnidi|isnidan]] iga d asrag agejdan i tamsedfart n SARS akken iffren kra n tirawin n uvirus-a deg isnidan deg [[New York]], [[San Francisco]], [[Manilla]] yakk d [[Hong Kong]] 
 
 [[Ammasen i wsenɣed d tesɣil ɣef  waṭṭanen]] deg [[Iwunak Yeddukklen n Temrikt|Marikan]] yakk d [[asnidi n NML|usnidi n NML]] deg [[Kanada]] ukzen-d aǧinum n uvirus n SARS deg yebrir 2003 <ref>{{amnir n web|url=https://www.cdc.gov/about/history/sars/feature.htm |title=Remembering SARS: A Deadly Puzzle and the Efforts to Solve It |date=11 yebrir 2013 |accessdate=3 ɣuct 2013 |publisher=Centers for Disease Control and Prevention |url-status=live |archiveurl=https://web.archive.org/web/20130801143131/http://www.cdc.gov/about/history/sars/feature.htm |archivedate=1 August 2013 }}</ref><ref>{{amnir n web|url=http://www.who.int/mediacentre/releases/2003/pr31/en/ |title=Coronavirus never before seen in humans is the cause of SARS |publisher=United Nations World Health Organization |date=16 yebrir 2006 |accessdate=5 yulyu 2006 |url-status=live |archiveurl=https://web.archive.org/web/20040812124322/http://www.who.int/mediacentre/releases/2003/pr31/en/ |archivedate=12 August 2004 }}</ref>, akken id ukzen (tebten-d) imusnawen deg [[Taseddawit n Erasmus n Rotterdam|tseddawit n Erasmus n Rotterdam]] yessedmir neɣ yettarra i [[tindagin n Koch|tendagin n Koch]] s wanect-a yedaddet (yettuḥeqq) d akken-it iga d [[amaṭṭan|amasrag id igellun s waṭṭan]]
+
+
+== Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) ==
+
+== Amezruy ==
+
+== Tasenvirust ==
+
+== Talɣa ==
+
+== Tamhazt ==
+
+== Ẓeṛ daɣen ==
+
+* [[Covid-19]]
+
+== Imniren ==
