/* Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) */

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -8,6 +8,8 @@ Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n id
 
 == Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) ==
 
+[[Tugna:SARS xray.jpg|thumb|250px|Tugna s [[Azenzar-X|uzenzar n X]] i yidmaren n umaṭun s SARS yesskanay-d [[tadnunnest]], dɣa anect-a yessentam aṭṭan n [[buturin]]]]
+
 == Amezruy ==
 
 == Tasenvirust ==
