/* Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) */

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -10,6 +10,8 @@ Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n id
 
 [[Tugna:SARS xray.jpg|thumb|250px|Tugna s [[Azenzar-X|uzenzar n X]] i yidmaren n umaṭun s SARS yesskanay-d [[tadnunnest]], dɣa anect-a yessentam aṭṭan n [[buturin]]]]
 
+Tamsedfart tamesguneft tamekruzt tanamsadt d [[aṭṭan amesgunef]] aẓaṛ-is d [[aṭṭan aɣersaw|aɣersaw]] ixeddem-it-id KUṚUNAVIRUS SARS. deg waṭas n wakuden avirus-a igellud s waṭṭan amekruz anda id tt-binen fell-as iskanen imenza yettemcabin iskanen n [[idis (aṭṭan)|yidis]], amdya: [[butmaẓwalt]], [[Amaẓla]] d [[tawla]] yeṭṭafar-iten-d sen n 2 ar 14 n wussan iskanen n wemray n usgunef (ṣṣɛuba n utneffes) <ref name="pmid15018127">{{aseggayet s weɣmis akadmi|author1=Chan-Yeung M |author2=Xu RH |title=SARS: epidemiology |journal=Respirology (Carlton, Vic.) |volume=8 |issue=Suppl |pages=S9–14 |date=wamber 2003 |pmid=15018127 |doi= 10.1046/j.1440-1843.2003.00518.x|url=}}</ref>
+
 == Amezruy ==
 
 == Tasenvirust ==
