/* Tamsedfart tamesguneft tamekruzt tanamsadt (SARS) */

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -10,7 +10,9 @@ Ass n 16 yebrir 2003 deg wakud n unfufed SARS deg [[Asya]] d kra n yideggan n id
 
 [[Tugna:SARS xray.jpg|thumb|250px|Tugna s [[Azenzar-X|uzenzar n X]] i yidmaren n umaṭun s SARS yesskanay-d [[tadnunnest]], dɣa anect-a yessentam aṭṭan n [[buturin]]]]
 
-Tamsedfart tamesguneft tamekruzt tanamsadt d [[aṭṭan amesgunef]] aẓaṛ-is d [[aṭṭan aɣersaw|aɣersaw]] ixeddem-it-id KUṚUNAVIRUS SARS. deg waṭas n wakuden avirus-a igellud s waṭṭan amekruz anda id tt-binen fell-as iskanen imenza yettemcabin iskanen n [[idis (aṭṭan)|yidis]], amdya: [[butmaẓwalt]], [[Amaẓla]] d [[tawla]] yeṭṭafar-iten-d sen n 2 ar 14 n wussan iskanen n wemray n usgunef (ṣṣɛuba n utneffes) <ref name="pmid15018127">{{aseggayet s weɣmis akadmi|author1=Chan-Yeung M |author2=Xu RH |title=SARS: epidemiology |journal=Respirology (Carlton, Vic.) |volume=8 |issue=Suppl |pages=S9–14 |date=wamber 2003 |pmid=15018127 |doi= 10.1046/j.1440-1843.2003.00518.x|url=}}</ref>
+Tamsedfart tamesguneft tamekruzt tanamsadt d [[aṭṭan amesgunef]] aẓaṛ-is d [[aṭṭan aɣersaw|aɣersaw]] ixeddem-it-id KUṚUNAVIRUS SARS. deg waṭas n wakuden avirus-a igellud s waṭṭan amekruz anda id tt-binen fell-as iskanen imenza yettemcabin iskanen n [[idis (aṭṭan)|yidis]], amdya: [[butmaẓwalt]], [[Amaẓla]] d [[tawla]] yeṭṭafar-iten-d sen n 2 ar 14 n wussan iskanen n wemray n usgunef (ṣṣɛuba n utneffes): <ref name="pmid15018127">{{aseggayet s weɣmis akadmi|author1=Chan-Yeung M |author2=Xu RH |title=SARS: epidemiology |journal=Respirology (Carlton, Vic.) |volume=8 |issue=Suppl |pages=S9–14 |date=wamber 2003 |pmid=15018127 |doi= 10.1046/j.1440-1843.2003.00518.x|url=}}</ref> [[tusut]], amray n usgunef, [[bungaf]] akken i yezmer ad yeglu g taggara s [[buturin]] yakk d [[buturin anvirus]] 
+
+Ass mi tenfufed waṭṭan-a deg 2003 yenɣa azal n 9% n wid yudnen yis <ref name="pmid16804033">{{aseggayet s uɣmis akadim|author1=Sørensen MD |author2=Sørensen B |author3=Gonzalez-Dosal R |author4=Melchjorsen CJ |author5=Weibel J |author6=Wang J |author7=Jun CW |author8=Huanming Y |author9=Kristensen P | title = Severe acute respiratory syndrome (SARS): development of diagnostics and antivirals | journal = Annals of the New York Academy of Sciences | volume = 1067 | issue = 1| pages = 500–5 |date=مايو 2006 | pmid = 16804033 | doi = 10.1196/annals.1354.072|bibcode=2006NYASA1067..500S }}</ref> isig n tmekkist (lmut) yella meqqer s waṭas ɣer yimdanen yugaren 60 n iseggasen yudnen yis anda azal n 50% mmuten.<ref name="pmid16804033"/>
 
 == Amezruy ==
 
