*Empty MediaWiki Message*

--- a/SARS-CoV.mw
+++ b/SARS-CoV.mw
@@ -19,6 +19,7 @@ Ass mi tenfufed waṭṭan-a deg 2003 yenɣa azal n 9% n wid yudnen yis <ref nam
 == Tasenvirust ==
 
 == Talɣa ==
+Talɣa n SARS d tin yettemcabin ar [[Kuṛunavirus|ivirusen-n-Kuṛuna]] s umata,ivirusen-a deg-sen icubranen imezziyen (idewwranen) meqqren fell-asen ikernennayen iy tezzin ɣef icubranen-nni
 
 == Tamhazt ==
 
