*Empty MediaWiki Message*

--- a/SARS-CoV-2.mw
+++ b/SARS-CoV-2.mw
@@ -15,3 +15,7 @@ Yettwasilef ɣef waddad amezwaru deg wacu icukken i [[tuddsa tamadlant n tdawsa]
 == Ẓeṛ daɣen ==
 
 == Imniren ==
+[[Taggayt:Aṭṭanen iɣersagmanen]]
+[[Taggayt:Arwas n Kuṛunavirus 2019-20]]
+[[Taggayt:Betacoronavirusen]] 
+[[Taggayt:Tisekrarin tidawsanin 2020]]
