--- a/SARS-CoV-2.mw
+++ b/SARS-CoV-2.mw
@@ -18,4 +18,4 @@ Yettwasilef ɣef waddad amezwaru deg wacu icukken i [[tuddsa tamadlant n tdawsa]
 [[Taggayt:Aṭṭanen iɣersagmanen]]
 [[Taggayt:Arwas n Kuṛunavirus 2019-20]]
 [[Taggayt:Betacoronavirusen]] 
-[[Taggayt:Tisakrarin tidawsanin 2020]]
+[[Taggayt:Tisekrarin tidawsanin n 2020]]
